[tool.poetry]
name = "rxitect"
version = "0.1.1"
description = "De-novo Drug Design using Deep Reinforcement Learning guided by Retrosynthetic Accessibility scores."
authors = ["Julius Cathalina <julius.cathalina@vuw.leidenuniv.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
seaborn = "^0.11.2"
pandas = "^1.4.2"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
wandb = "^0.12.16"
pytorch-lightning = "^1.6.4"
selfies = "^2.1.0"
xgboost = "^1.6.1"
tqdm = "^4.42.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
jupyterlab = "^3.4.2"
mypy = "^0.950"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
