[tool.poetry]
name = "rxitect"
version = "0.1.0"
description = "Code for Julius Cathalina's M.Sc. Thesis"
authors = ["Julius Cathalina <j.e.j.cathalina@vuw.leidenuniv.nl>"]

[tool.poetry.dependencies]
python = "3.8"
ray = "^1.13.0"
seaborn = "^0.11.2"
hydra-core = "^1.2.0"
hydra-colorlog = "^1.2.0"
dvc = "^2.17.0"
wandb = "^0.13.1"
graphviz = "^0.20.1"
pyprojroot = "^0.2.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
jupyterlab = "^3.4.4"
ipywidgets = "^7.7.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

