[metadata]
name = rxitect
version = 0.2.0
description = De-novo Drug Generation using Deep Reinforcement Learning guided by Multi-Objective Optimization including Retrosynthetic Accessibility scores.
url = https://github.com/naisuu/Rxitect
author = Julius Cathalina
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: GPU :: NVIDIA CUDA :: 11.4
    Intended Audience :: Science/Research
keywords = reinforcement-learning, deep-learning, generative-chemistry, drug-discovery, multi-objective-optimization

[options]
package_dir =
    =src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src