[metadata]
name = rxitect
version = attr: rxitect.__version__
description = De-novo Drug Generation using Deep Reinforcement Learning guided by Multi-Objective Optimization and Retrosynthetic Accessibility.
url = https://github.com/naisuu/Rxitect
author = Julius Cathalina
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Intended Audience :: Science/Research
keywords = reinforcement-learning, deep-learning, generative-chemistry, drug-discovery, multi-objective-optimization

[options]
package_dir =
    =rxitect
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = rxitect
